      mapped to a MIDI controller in the MidiPlayer via the "instrumentControllerLFO" tag.

    - Added support for using "-" in the RandomPatternEngine and the RandomFragmentPatternEngine in order to create an empty pattern.
      For example, you can now use "A1,-,A2,-".

    - Controllers for LFOs can now be accessed by their MIDI controller number in addition to predefined names. This allows using
      controllers where no predefined name exists.

    - Cleaned up all code.


0.7.1: 2014-05-31

    - The option "--show-midi-devices" (alias "-m") now also shows devices with MIDI IN in additon to devices with MIDI OUT.

    - Fixed a stupid bug that made the MIDI device detection fail if the first MIDI device in the <device> tag of the MidiPlayer is
      not available in the system. A workaround is to put just the available MIDI device in the list.
     

0.7: 2014-05-24

    - Added support for function evaluation in pattern strings. The first function added is E(pulses, steps, on-fragment,
      off-fragment), which expands to the Euclidean rhythm given by the given number of pulses and steps. See the Basics documentation
      for details about pattern function evaluation.

    - The MidiPlayer now supports receiving synchronization messages from an external MIDI device using the
      "synchronizationDevice" tag. The synchronization device can supply MIDI timing ticks for remote-controlling SoundHelix'
      BPM speed. It can also provide START/CONTINUE and STOP messages for starting/stopping playback remotely. SoundHelix will
      wait for a START message if the "waitForStart" attribute is set to true, otherwise it will start playing automatically as before.

    - Added support for setting the maximum velocity using the "maxVelocity" tag in the "structure" tag (defaults to 32767 for
      backwards compatibility). This sets the default note velocity if no velocity is provided as well as the scaling factor when